# WinApiDrawExample

./: CMakeLists.txt  action.h  animation.cpp  animation.h  color.cpp  color.h  graphisobject.cpp  graphisobject.h  main.cpp  objectmanager.cpp  objectmanager.h
actions/: moveaction.cpp  moveaction.h  resizeaction.cpp  resizeaction.h
objects/: brokenlineobject.cpp  brokenlineobject.h  circleobject.cpp  circleobject.h  ellipseobject.cpp  ellipseobject.h  pentagonobject.cpp  pentagonobject.h  pieobject.cpp  pieobject.h  polygon.cpp  polygon.h  rectangleobject.cpp  rectangleobject.h  segmentobject.cpp  segmentobject.h
